--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>GeorgieIsYourHomie's main index page</h1>
-<a href="/web-design-solutions-2"> Link to MCTC html</a>
+<a href="/html2"> Link to HTML2</a>
