--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>GeorgieIsYourHomie's main index page</h1>
 <a href="/html2">Link to HTML2</a>
+<a href="/web-solutions-2">Link to Web Solutions 2</a>
