--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>GeorgieIsYourHomie's main index page</h1>
 <a href="/html2/index.html">Link to HTML2</a>
 <a href="/web-solutions-2/index.html">Link to Web Solutions 2</a>
+<a href="/random-duck-n-dog/index.html">Link to Random Duck N' Dog</a>
