--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GeorgieIsYourHome Website</title>
+  </head>
+  <body>
+    <header>
 <h1>GeorgieIsYourHomie's main index page</h1>
-<a href="/html2/index.html">Link to HTML2</a>
-<a href="/web-solutions-2/index.html">Link to Web Solutions 2</a>
-<a href="/random-fox-n-dog/index.html">Link to Random Fox N' Dog</a>
+    </header>
+
+    <main>
+<ul>
+<li><a href="/html2/index.html">Link to HTML2</a></li>
+<li><a href="/web-solutions-2/index.html">Link to Web Solutions 2</a></li>
+<li><a href="/random-fox-n-dog/index.html">Link to Random Fox N' Dog</a></li>
+<li><a href="/design-quotes/index.html">Link to Design Quotes</a></li>
+</ul>
+      </main>
+  </body>
+</html>
